# CellposeSegmentatorPortable

./: .gitignore  LICENSE  README.md  cellpose_segmentation.py  config.yaml  image_utils.py  path_list.csv  process.py  pyproject.toml  requirements.txt
cellposesegmentator/: process.py
