[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cellposesegmentator"
dynamic = ["version"]
description = "Package to run the Cellpose segmentation model in a convenient way."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy==1.26.4",
    "cellpose==3.1.1.1",
    "scikit-image==0.22.0",
    "opencv-python==4.9.0.80",
    "imagecodecs==2024.12.30",
    "scipy==1.13.0",
    "pillow==11.1.0",
    "PyYAML==6.0.1"
]

license = "MIT"
license-files = [
    "LICENSE*",
]

[project.scripts]
hpacellsegmentator-batch = "cellposesegmentator.process:main"

[tool.setuptools.dynamic]
version = {attr = "cellposesegmentator.__version__"}

# pytorch_zoo must stay a top-level package: the .pth model files are pickled
# whole objects that record their classes as `pytorch_zoo.*`, so torch.load
# (weights_only=False) resolves those import paths at load time.
[tool.setuptools.packages.find]
include = ["cellposesegmentator*"]
namespaces = false

[tool.setuptools.package-data]
cellposesegmentator = ["VERSION"]